# Thesis

./: CMakeLists.txt  controller_train5.cpp  model_push.cc  package.xml  terrain_library.h
Terramechanics/: AAA_TerramechanicsDynamicsModel.m  AAA_TerramechanicsDynamicsModel_poor.m  AAA_TerramechanicsDynamicsModel_well.m  shear_stress_lines.m  shear_stress_lines_2.m
config/: dd_robot_control.yaml  robot43_control.yaml  train3_control.yaml  train5_control.yaml  worm_control.yaml
gazebo_plugin/: CMakeLists.txt
launch/: big_idea_winch.launch  ddrobot_rope.launch  ddrobot_terrain.launch  ddrobot_xacro.launch  demo1_FB.launch  demo2_worm.launch  demo3_train3_proposal.launch  demo4_train36.launch  demo5_train3_final.launch  demo6_DEM.launch  terrain_controller.launch  terrain_environment.launch  train3_6.launch  train3_controller.launch  train3_rigid.launch  train3_terrain.launch  train3_test.launch  train3_world_test.launch  train3_xacro.launch  train5_controller.launch  train5_crab.launch  train5_test.launch  train5_xt.launch  worm_controller.launch  worm_xacro.launch
scripts/: Xt.py  Xt_bigidea.py  Xt_robot43.py  Xt_train3.py  Xt_train5.py  Xt_worm.py
src/: cable_model_train3.cpp  controller_FB.cpp  controller_big_idea_winch.cpp  controller_train3.cpp  controller_train3_final.cpp  controller_train3_reverse.cpp  controller_train5.cpp  controller_train5_1.cpp  controller_train5_crab.cpp  controller_train5_crab2.cpp  controller_worm.cpp  energy_train5.cpp  force_sensor_train5.cpp  immobilization_detect_train5.cpp  motor_model.cpp  motor_model_big_idea.cpp  motor_model_service_train5.cpp  motor_model_train3.cpp  motor_model_train5.cpp  motor_model_worm.cpp  rope_model_FB.cpp  speed_control_train3.cpp  speed_control_train5.cpp  spring_model_train5.cpp  terrain_library.cpp  terrain_library.h  terrain_model.cpp  terrain_model_big_idea.cpp  terrain_model_train3.cpp  terrain_model_train5.cpp  terrain_model_worm.cpp
urdf/: big_idea_winch.urdf.xacro  dd_robot.gazebo  dd_robot.gazebo~  dd_robot.urdf  dd_robot.urdf.xacro  dd_robot.urdf~  model.urdf~  robot43.urdf.xacro  test.urdf.xacro  train1.urdf.xacro  train3_6.urdf.xacro  train3_final.urdf.xacro  train3_proposal.urdf.xacro  train3_rigid.urdf.xacro  train5.urdf.xacro  train5_inch.urdf.xacro  worm.urdf.xacro
worlds/: DEM.world  big_idea.world  ddrobot.world  frictionless.world  mud.world  sastrugi.world  train3.world
